# ivanzufabc.github.io

./: .gitignore  README.md  foto.cpp  index.html  objeto_rapido.avi  pessoa_devagar.avi  style.css
Labs/lab01/: CMakeLists.txt  index.html  objeto_devagar.avi  pessoa_rapido.avi
Labs/lab02/: CMakeLists.txt  SalPimenta  SalPimenta.cpp  bilateral  camera  filtro_bilateral.cpp  filtro_camera.cpp  filtro_gaussiano.cpp  filtro_media.cpp  filtro_mediana.cpp  filtro_mediano.cpp  gaussiano  index.html  media  mediana  mediano  ruido_sal_e_pimenta.cpp
Labs/lab03/Lab3_2/: CMakeLists.txt  lab3  lab3.cpp
Labs/lab03/Lab3_2a/: lab3  lab3.cpp
Labs/lab03/Lab3_2b/: lab3  lab3.cpp
Labs/lab03/Lab3_2c/: lab3  lab3.cpp
lab01/: foto.cpp  index.html  video.cpp
