cmake_minimum_required(VERSION 2.8)
project( Lab02 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( bilateral filtro_bilateral.cpp )
add_executable( gaussiano filtro_gaussiano.cpp )
add_executable( media filtro_media.cpp )
add_executable( mediano filtro_mediano.cpp )
add_executable( camera filtro_camera.cpp )
target_link_libraries( bilateral ${OpenCV_LIBS} )
target_link_libraries( gaussiano ${OpenCV_LIBS} )
target_link_libraries( media ${OpenCV_LIBS} )
target_link_libraries( mediano ${OpenCV_LIBS} )
target_link_libraries( camera ${OpenCV_LIBS} )
